--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -87,6 +87,27 @@
                     <span>2023-08-11</span> <span>14:31</span>
                     <p>조회수</p> <span>51</span>
                 </div>
+
+                <form action="" class="cmmtFrm">
+                    <strong>여행 후기</strong>
+                    <div class="cmmtBox">
+                        <textarea placeholder="후기를 입력해주세요"></textarea>
+                        <button type="button" class="cmmtBtn"></button>
+                    </div>
+                </form>
+
+                <div>
+                    <img src="./source/profImg3.jpg" class="cmmtUserImg">
+                    <div class="cmmtUserTxt">
+                        <span>유저 이름</span>
+                        <span>@uesrId0101</span>
+                        <p class="cmmtCon">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Sapiente repellendus eveniet sint maiores.
+                        </p>
+                    </div>
+                </div>
+
             </div>
 
 
