--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -36,7 +36,7 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="./store.html" class="store">여행상점</a>
+                        <a href="./Store.html" class="store">여행상점</a>
                     </li>
                     <li>
                         <a href="./Community_Group.html" class="community">커뮤니티</a>
