--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -61,9 +61,9 @@
                 <strong>[베트남 호치민] 🌇 Ho Chi Minh City tour in 1 Day 🙌🏻</strong>
                 <div class="titleBottom">
                     <div class="postingBtn">
-                        <button type="button" class="wishBtn">위시</button>
-                        <button type="button" class="upBtn">수정</button>
-                        <button type="button" class="delBtn">삭제</button>
+                        <button type="button" class="wishBtn"></button>
+                        <button type="button" class="upBtn admBtn">수정</button>
+                        <button type="button" class="delBtn admBtn">삭제</button>
                     </div>
                     <span class="itemPrice">124,000 <span>원</span></span>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                 </form>
 
-                <div>
+                <div class="comment">
                     <img src="./source/profImg3.jpg" class="cmmtUserImg">
                     <div class="cmmtUserTxt">
                         <span>유저 이름</span>
