--- a/community_schedule.html
+++ b/community_schedule.html
@@ -93,9 +93,45 @@
                 </div>
                 <div class="schMap schMap01"></div>
                 <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
+                    <span class="schLoc">울란바토르</span>
                     <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
                 </div>
+
+                <div class="dayLocAll">
+                    <div class="dayAll">
+                        <input type="radio" id="day01" name="day">
+                        <label for="day01">Day1</label>
+                        <input type="radio" id="day02" name="day">
+                        <label for="day02">Day2</label>
+                        <input type="radio" id="day03" name="day">
+                        <label for="day03">Day3</label>
+                        <input type="radio" id="day04" name="day">
+                        <label for="day04">Day3</label>
+                        <input type="radio" id="day05" name="day">
+                        <label for="day05">Day3</label>
+                    </div>
+                    
+                    <ul class="dayLoc">
+                        <li>후쿠오카 타워</li>
+                        <li>디즈니 랜드</li>
+                    </ul>
+                    <ul class="dayLoc">
+                        <li>울란바토르 어디</li>
+                        <li>몽골의 어디어디</li>
+                    </ul>
+                    <ul class="dayLoc">
+                        <li>후쿠오카 타워</li>
+                        <li>디즈니 랜드</li>
+                    </ul>
+                    <ul class="dayLoc">
+                        <li>후쿠오카 타워</li>
+                        <li>디즈니 랜드</li>
+                    </ul>
+                    <div class="noLoc">
+                        <span>저장된 일정이 없습니다.</span>
+                    </div>
+                </div>
+
             </div>
             <div class="schOne">
                 <div class="schTopInfo">
@@ -115,7 +151,7 @@
                 </div>
                 <div class="schMap schMap02"></div>
                 <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
+                    <span class="schLoc">라스베가스</span>
                     <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
                 </div>
             </div>
@@ -180,94 +216,6 @@
                     </div>
                 </div>
                 <div class="schMap schMap03"></div>
-                <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
-                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
-                </div>
-            </div>
-            <div class="schOne">
-                <div class="schTopInfo">
-                    <div class="schUser">
-                        <img src="./source/profImg1.jpg">
-                        <div>
-                            <p class="schNicK">닉네임</p>
-                            <p class="subTxt">30대 • 여성</p>
-                        </div>
-                    </div>
-                    <div class="schDays">
-                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                        <p  class="subTxt">
-                            23-08-01 ~ 23-08-06
-                        </p>
-                    </div>
-                </div>
-                <div class="schMap schMap03"></div>
-                <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
-                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
-                </div>
-            </div>
-            <div class="schOne">
-                <div class="schTopInfo">
-                    <div class="schUser">
-                        <img src="./source/profImg1.jpg">
-                        <div>
-                            <p class="schNicK">닉네임</p>
-                            <p class="subTxt">30대 • 여성</p>
-                        </div>
-                    </div>
-                    <div class="schDays">
-                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                        <p  class="subTxt">
-                            23-08-01 ~ 23-08-06
-                        </p>
-                    </div>
-                </div>
-                <div class="schMap schMap03"></div>
-                <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
-                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
-                </div>
-            </div>
-            <div class="schOne">
-                <div class="schTopInfo">
-                    <div class="schUser">
-                        <img src="./source/profImg1.jpg">
-                        <div>
-                            <p class="schNicK">닉네임</p>
-                            <p class="subTxt">30대 • 여성</p>
-                        </div>
-                    </div>
-                    <div class="schDays">
-                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                        <p  class="subTxt">
-                            23-08-01 ~ 23-08-06
-                        </p>
-                    </div>
-                </div>
-                <div class="schMap schMap04"></div>
-                <div class="schBottom">
-                    <span class="schLoc">홍콩</span>
-                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
-                </div>
-            </div>
-            <div class="schOne">
-                <div class="schTopInfo">
-                    <div class="schUser">
-                        <img src="./source/profImg1.jpg">
-                        <div>
-                            <p class="schNicK">닉네임</p>
-                            <p class="subTxt">30대 • 여성</p>
-                        </div>
-                    </div>
-                    <div class="schDays">
-                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                        <p  class="subTxt">
-                            23-08-01 ~ 23-08-06
-                        </p>
-                    </div>
-                </div>
-                <div class="schMap schMap05"></div>
                 <div class="schBottom">
                     <span class="schLoc">홍콩</span>
                     <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
@@ -278,11 +226,11 @@
 
         <div class="pagination">
             <button type="button" class="prevBtn arrow"></button>
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>5</span>
+            <button type="button" value="" class="pageNum active">1</button>
+            <button type="button" value="" class="pageNum">2</button>
+            <button type="button" value="" class="pageNum">3</button>
+            <button type="button" value="" class="pageNum">4</button>
+            <button type="button" value="" class="pageNum">5</button>
             <button type="button" class="nextBtn arrow"></button>
         </div>
 
