--- a/store_posting.html
+++ b/store_posting.html
@@ -207,7 +207,17 @@
             <div class="detailWrite">
 
                 <div class="titleBox">
+                    <span>제목을 입력</span>
                     <input type="text" name="title" placeholder="제목을 입력해주세요">
+                </div>
+
+                <div class="imgUpAll">
+                    <span>설명 이미지 선택</span>
+                    <input type="file" name="imgFile" id="fileInput">
+                    <label for="fileInput" class="uploadedBtn">재업로드</label> 
+                    <div class="imgArea infoImg">
+                        <label for="fileInput" class="fileLabel">업로드</label> 
+                    </div>
                 </div>
 
                 <div class="contxtAll">
@@ -219,10 +229,10 @@
 
                 <div class="imgUpAll">
                     <span>배경 이미지 선택</span>
-                    <input type="file" name="imgFile" id="fileInput">
-                    <label for="fileInput" class="uploadedBtn">재업로드</label> 
-                    <div class="imgArea">
-                        <label for="fileInput" class="fileLabel">업로드</label> 
+                    <input type="file" name="bgFile" id="bgInput">
+                    <label for="bgInput" class="uploadedBtn">재업로드</label> 
+                    <div class="imgArea bgImg">
+                        <label for="bgInput" class="fileLabel">업로드</label> 
                     </div>
                 </div>
 
@@ -239,7 +249,7 @@
                 </div>
                 
             </div>
-            <button type="button" class="submitBtn">작성완료</button>
+            <button type="submit" class="submitBtn">작성완료</button>
         </form>
     </section>
 
