--- a/community_schedule.html
+++ b/community_schedule.html
@@ -102,7 +102,7 @@
 
                 <div class="dayLocAll">
                     <div class="dayAll">
-                        <span class="day">Day1</span>
+                        <span class="day active">Day1</span>
                         <span class="day">Day2</span>
                         <span class="day">Day3</span>
                         <span class="day">Day4</span>
@@ -125,7 +125,7 @@
                             <li>머레이 하우스</li>
                             <li>치린 수도원</li>
                         </ul>
-                        <div class="noLoc"></div>
+                        <ul></ul>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
 
                 <div class="dayLocAll">
                     <div class="dayAll">
-                        <span class="day">Day1</span>
+                        <span class="day active">Day1</span>
                         <span class="day">Day2</span>
                         <span class="day">Day3</span>
                         <span class="day">Day4</span>
@@ -172,6 +172,7 @@
                             <li>침사추이</li>
                             <li>포팅거 스트리트</li>
                         </ul>
+                        <ul></ul>
                         <ul>
                             <li>스타의 거리</li>
                             <li>카우룽 공원</li>
@@ -181,7 +182,6 @@
                             <li>머레이 하우스</li>
                             <li>치린 수도원</li>
                         </ul>
-                        <div class="noLoc"></div>
                     </div>
                 </div>
 
@@ -211,6 +211,7 @@
                     </div>
                     <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
                 </div>
+                
             </div>
             <div class="schOne">
                 <div class="schTopInfo">
