--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -23,6 +23,10 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/sDetail.css" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -113,6 +117,7 @@
 
             <div class="pRight">
                 <div class="rightWrap">
+                    <div id="datepicker" class="calendar"></div>
                     <div id="calendar"></div>
 
                     <p class="chTxt">상품 선택</p>
@@ -157,6 +162,9 @@
     <script src="./js/header.js"></script>
     <script src="./js/sDetail.js"></script>
 
+    <script>
+        
+    </script>
 </body>
 
 </html>
