--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -22,8 +22,8 @@
     <title>EpicTrip | 에픽트립</title>
 
     <link href="./css/headFoot.css" rel="stylesheet">
-    <link href="./css/sDetail.css" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link href="./css/sDetail.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -112,13 +112,24 @@
                     </div>
                 </div>
 
+                <div class="comment">
+                    <img src="./source/profImg4.jpg" class="cmmtUserImg">
+                    <div class="cmmtUserTxt">
+                        <span>유저 이름</span>
+                        <span>@uesrId0101</span>
+                        <p class="cmmtCon">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Sapiente repellendus eveniet sint maiores.
+                        </p>
+                    </div>
+                </div>
+
             </div>
 
 
             <div class="pRight">
                 <div class="rightWrap">
-                    <div id="datepicker" class="calendar"></div>
-                    <div id="calendar"></div>
+                    <div class="calendar"></div>
 
                     <p class="chTxt">상품 선택</p>
                     <div class="priceCnt">
