--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -72,20 +72,23 @@
                     <span class="itemPrice">124,000 <span>원</span></span>
                 </div>
 
-                <p class="postText">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti
-                    quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem
-                    quasi ipsum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem
-                    rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
-                    sapiente, ea nulla voluptatibus ex!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti
-                    quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem
-                    quasi ipsum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem
-                    rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
-                    sapiente, ea nulla voluptatibus ex!
-                </p>
+                <div class="postCon">
+                    <p class="postText">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti
+                        quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem
+                        quasi ipsum.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem
+                        rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
+                        sapiente, ea nulla voluptatibus ex!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti
+                        quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem
+                        quasi ipsum.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem
+                        rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
+                        sapiente, ea nulla voluptatibus ex!
+                    </p>
+                    <img class="postImg" src="./source/cG_bg11.jpg">
+                </div>
 
                 <div class="postDV">
                     <span>2023-08-11</span> <span>14:31</span>
@@ -131,11 +134,23 @@
                 <div class="rightWrap">
                     <div class="calendar"></div>
 
+                    <p class="saleTxt">요일별 금액현황</p>
+                    <div class="saleInfo">
+                        <div class="sRow sHead">
+                            <span>할인 요일</span>
+                            <span>할인율</span>
+                        </div>
+                        <div class="sRow">
+                            <span>금, 토, 일</span>
+                            <span class="percent">10%</span>
+                        </div>
+                    </div>
+
                     <p class="chTxt">상품 선택</p>
                     <div class="priceCnt">
                         <div>
                             <p>1인 당 예약금</p>
-                            <p class="chosenDay">23-08-16</p>
+                            <p class="onePrice">479,000 원</p>
                         </div>
                         <div class="cntCtrl">
                             <span class="minus numBtn">&#8211</span>
@@ -154,7 +169,7 @@
                 </div>
 
                 <button type="button" class="goPay">
-                    <span>127,000</span>
+                    <span>479,000</span>
                     <span>원 결제하기</span>
                 </button>
             </div>
