--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -146,26 +146,29 @@
                         </div>
                     </div>
 
-                    <p class="chTxt">상품 선택</p>
-                    <div class="priceCnt">
-                        <div>
-                            <p>1인 당 예약금</p>
-                            <p class="onePrice">479,000 원</p>
-                        </div>
-                        <div class="cntCtrl">
-                            <span class="minus numBtn">&#8211</span>
-                            <span class="number"></span>
-                            <span class="plus numBtn">+</span>
-                        </div>
-                    </div>
 
-                    <div class="payInfo">
-                        <span>인원별 할인 정보 상세</span>
-                        <p>
-                            3인 이상 예약할 시, 총 금액에서 10%,<br>
-                            5인 이상 예약할 시, 총 금액에서 15% 할인이 적용됩니다.
-                        </p>
-                    </div>
+                    <form method="" action="">
+                        <p class="chTxt">상품 선택</p>
+                        <div class="priceCnt">
+                            <div>
+                                <p>1인 당 예약금</p>
+                                <p class="onePrice">479,000 원</p>
+                            </div>
+                            <div class="cntCtrl">
+                                <span class="minus numBtn">&#8211</span>
+                                <span class="number"></span>
+                                <span class="plus numBtn">+</span>
+                            </div>
+                        </div>
+    
+                        <div class="payInfo">
+                            <span>인원별 할인 정보 상세</span>
+                            <p>
+                                3인 이상 예약할 시, 총 금액에서 10%,<br>
+                                5인 이상 예약할 시, 총 금액에서 15% 할인이 적용됩니다.
+                            </p>
+                        </div>
+                    </form>
                 </div>
 
                 <button type="button" class="goPay">
