--- a/Store_List.html
+++ b/Store_List.html
@@ -53,7 +53,7 @@
 
     <section>
         <div class="sListThumb">
-            <img src="./source/stBg2.jpg" alt="">
+            <img src="./source/bg_japan.jpg" alt="">
             <h1>일본</h1>
         </div>
         <div class="line"></div>
