--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -47,7 +47,8 @@
                     <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li>마이페이지</li>
+                        <li><a href="./Community_Group.html">마이페이지</a></li>
+                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
                         <li>로그아웃</li>
                     </ul>
                 </div>
@@ -87,8 +88,9 @@
                         rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
                         sapiente, ea nulla voluptatibus ex!
                     </p>
-                    <img class="postImg" src="./source/cG_bg11.jpg">
+                    <img class="postImg" src="./source/cG_bg1.jpg">
                 </div>
+                <button type="button" class="postMore">더보기</button>
 
                 <div class="postDV">
                     <span>2023-08-11</span> <span>14:31</span>
@@ -104,27 +106,33 @@
                 </form>
 
                 <div class="comment">
-                    <img src="./source/profImg3.jpg" class="cmmtUserImg">
-                    <div class="cmmtUserTxt">
-                        <span>유저 이름</span>
-                        <span>@uesrId0101</span>
-                        <p class="cmmtCon">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Sapiente repellendus eveniet sint maiores.
-                        </p>
+                    <div class="uInfo">
+                        <img src="./source/profImg3.jpg" class="cmmtUserImg">
+                        <div class="cmmtUserTxt">
+                            <span>유저 이름</span>
+                            <span>@uesrId0101</span>
+                            <p class="cmmtCon">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Sapiente repellendus eveniet sint maiores.
+                            </p>
+                        </div>
                     </div>
+                    <span class="cmmtDate">2023-08-10</span>
                 </div>
 
                 <div class="comment">
-                    <img src="./source/profImg4.jpg" class="cmmtUserImg">
-                    <div class="cmmtUserTxt">
-                        <span>유저 이름</span>
-                        <span>@uesrId0101</span>
-                        <p class="cmmtCon">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Sapiente repellendus eveniet sint maiores.
-                        </p>
+                    <div class="uInfo">
+                        <img src="./source/profImg4.jpg" class="cmmtUserImg">
+                        <div class="cmmtUserTxt">
+                            <span>유저 이름</span>
+                            <span>@uesrId0101</span>
+                            <p class="cmmtCon">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Sapiente repellendus eveniet sint maiores.
+                            </p>
+                        </div>
                     </div>
+                    <span class="cmmtDate">2023-08-10</span>
                 </div>
 
             </div>
