--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -41,10 +41,11 @@
                 </ul>
                 <div class="userHead">
                     <a href="#"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="#" ><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li>마이페이지</li>
+                        <li><a href="./Community_Group.html">마이페이지</a></li>
+                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
                         <li>로그아웃</li>
                     </ul>
                 </div>
