--- a/store_posting.html
+++ b/store_posting.html
@@ -48,7 +48,8 @@
                     <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li>마이페이지</li>
+                        <!-- <li><a href="./Community_Group.html">마이페이지</a></li> -->
+                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
                         <li>로그아웃</li>
                     </ul>
                 </div>
@@ -316,14 +317,23 @@
 
             // 시작날짜가 마지막날짜보다 크다면 이상하기 때문에
             if (startDate01 > endDate01) {
-                alert("다시 선택해 주세요")
+                alert("다시 선택해 주세요");
             } else {
                 console.log(startDate);
                 console.log(endDate);
                 $("#startdateS").val(startDate)
                 $("#enddateS").val(endDate)
-
             }
+
+            // ---- 추가!!! ------ 선택 비활성화
+            if(startDate == "" || endDate == "") {
+                alert("날짜를 선택해주세요.");
+            } else {
+                $("#startdate").attr("disabled",true); 
+                $("#enddate").attr("disabled",true); 
+                $("#dateClick").addClass("clicked");
+            }
+
         })
 
         $(".daySelecAll").click(function () {
@@ -342,6 +352,17 @@
                 dcday = dcday + e + " ";
             })
             $("#dcday").val(dcday)
+
+            // ---- 추가!!! ------ 선택 비활성화
+            if(dcday == "") {
+                alert("할인 요일을 선택해주세요.");
+            } else if($(".saleDrop").val() == null) {
+                alert("할인율을 선택해주세요.");
+            } else {
+                $(".saleDrop").attr("disabled",true); 
+                $("input[name='saleDay']").attr("disabled",true); 
+                $("#dcdayBtn").addClass("clicked");
+            }
 
             // 인클루드스는 내용중에 문자가 있는지 확인해줌
             if (dcday.includes("화")) {
