--- a/Store_List.html
+++ b/Store_List.html
@@ -64,8 +64,8 @@
                     <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
                     <button type="button"></button>
                 </form>
-                <button type="button" class="sortBtn">최신순</button>
-                <button type="button" class="sortBtn">조회순</button>
+                <input type="checkbox" class="sortBtn" id="sort" value="">
+                <label for="sort">조회순</label>
             </div>
             <a href="./Store_Posting.html" class="postBtn">상품 작성하기</a>
         </div>
