--- a/adm_calendar.html
+++ b/adm_calendar.html
@@ -120,6 +120,7 @@
                 selectable: true,
                 selectMirror: true,
 
+                height: 700,
                 titleFormat: function (date) {
                     year = date.date.year;
                     month = date.date.month + 1;
