--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -94,7 +94,7 @@
                 <form action="" class="cmmtFrm">
                     <strong>여행 후기</strong>
                     <div class="cmmtBox">
-                        <textarea placeholder="후기를 입력해주세요"></textarea>
+                        <textarea placeholder="후기를 입력해주세요 (200자 이내)" maxlength="200"></textarea>
                         <button type="button" class="cmmtBtn"></button>
                     </div>
                 </form>
@@ -164,10 +164,11 @@
                         </div>
     
                         <div class="payInfo">
-                            <span>인원별 할인 정보 상세</span>
+                            <span>필수 유의 사항</span>
                             <p>
-                                3인 이상 예약할 시, 총 금액에서 10%,<br>
-                                5인 이상 예약할 시, 총 금액에서 15% 할인이 적용됩니다.
+                                • 여권 만료일은 반드시 6개월 이상 남아 있어야 합니다. <br>
+                                • 기상 관련 취소는 100% 환불 도와드립니다.<br>
+                                • 여행자 보험에 가입 후 투어를 진행할 것을 권장합니다.
                             </p>
                         </div>
                     </form>
