--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -105,6 +105,7 @@
                         <div class="cmmtUserTxt">
                             <span>유저 이름</span>
                             <span>@uesrId0101</span>
+                            <button type="button" class="commDel">삭제</button>
                             <p class="cmmtCon">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Sapiente repellendus eveniet sint maiores.
@@ -120,6 +121,7 @@
                         <div class="cmmtUserTxt">
                             <span>유저 이름</span>
                             <span>@uesrId0101</span>
+                            <button type="button" class="commDel">삭제</button>
                             <p class="cmmtCon">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Sapiente repellendus eveniet sint maiores.
