--- a/Mypage_mycal.html
+++ b/Mypage_mycal.html
@@ -32,10 +32,10 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="#"  class="store">여행상점</a>
+                        <a href="./Store.html" class="store">여행상점</a>
                     </li>
                     <li>
-                        <a href="#"  class="community">커뮤니티</a>
+                        <a href="./Community_Group.html" class="community">커뮤니티</a>
                     </li>
                 </ul>
                 <div class="userHead">
@@ -109,13 +109,133 @@
                 </div>
                 <div class="mypageCon">
                     <h1 class="mypageName">내 일정</h1>
-                    <div class="line"></div>
-                    <div class="myConIn">
 
-                    </div>
+                    <div class="schAll">
+
+                        <div class="schOne">
+                            <div class="schTopInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <div>
+                                        <p class="schNicK">닉네임</p>
+                                        <p class="subTxt">30대 • 여성</p>
+                                    </div>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="subTxt">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schMap schMap01"></div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+
+                            <div class="dayLocAll">
+                                <div class="dayAll">
+                                    <span class="day active">Day1</span>
+                                    <span class="day">Day2</span>
+                                    <span class="day">Day3</span>
+                                    <span class="day">Day4</span>
+                                    <span class="day">Day5</span>
+                                    <span class="day">Day6</span>
+                                </div>
+
+                                <div class="locList">
+                                    <ul class="active">
+                                        <li>홍콩 해양 공원</li>
+                                        <li>빅토리아 피크</li>
+                                        <li>란터우 섬</li>
+                                        <li>침사추이</li>
+                                        <li>포팅거 스트리트</li>
+                                    </ul>
+                                    <ul>
+                                        <li>스타의 거리</li>
+                                        <li>카우룽 공원</li>
+                                        <li>홍콩 역사 박물관</li>
+                                    </ul>
+                                    <ul>
+                                        <li>머레이 하우스</li>
+                                        <li>치린 수도원</li>
+                                    </ul>
+                                    <ul></ul>
+                                    <ul>
+                                        <li>머레이 하우스</li>
+                                        <li>치린 수도원</li>
+                                    </ul>
+                                    <ul>
+                                        <li>머레이 하우스</li>
+                                        <li>치린 수도원</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="schOne">
+                            <div class="schTopInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <div>
+                                        <p class="schNicK">닉네임</p>
+                                        <p class="subTxt">30대 • 여성</p>
+                                    </div>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="subTxt">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schMap schMap02"></div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">라스베가스</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+
+                            <div class="dayLocAll">
+                                <div class="dayAll">
+                                    <span class="day active">Day1</span>
+                                    <span class="day">Day2</span>
+                                    <span class="day">Day3</span>
+                                    <span class="day">Day4</span>
+                                </div>
+
+                                <div class="locList">
+                                    <ul class="active">
+                                        <li>홍콩 해양 공원</li>
+                                        <li>빅토리아 피크</li>
+                                        <li>란터우 섬</li>
+                                        <li>침사추이</li>
+                                        <li>포팅거 스트리트</li>
+                                    </ul>
+                                    <ul></ul>
+                                    <ul>
+                                        <li>스타의 거리</li>
+                                        <li>카우룽 공원</li>
+                                        <li>홍콩 역사 박물관</li>
+                                    </ul>
+                                    <ul>
+                                        <li>머레이 하우스</li>
+                                        <li>치린 수도원</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
 
     </section>
 
