--- a/Mypage_mycal.html
+++ b/Mypage_mycal.html
@@ -113,22 +113,18 @@
                     <div class="schAll">
 
                         <div class="schOne">
-                            <div class="schTopInfo">
+                            <div class="schInfo">
                                 <div class="schUser">
                                     <img src="./source/profImg1.jpg">
-                                    <div>
-                                        <p class="schNicK">닉네임</p>
-                                        <p class="subTxt">30대 • 여성</p>
-                                    </div>
+                                    <p class="schNicK">닉네임</p>
                                 </div>
                                 <div class="schDays">
-                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                                    <p class="subTxt">
+                                    <span>여행기간&nbsp;&nbsp;<span class="days">5일</span></span>
+                                    <span class="subTxt">
                                         23-08-01 ~ 23-08-06
-                                    </p>
+                                    </span>
                                 </div>
                             </div>
-                            <div class="schMap schMap01"></div>
                             <div class="schBottom">
                                 <div>
                                     <img src="./source/loc.png" class="locIco">
@@ -136,101 +132,6 @@
                                 </div>
                                 <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
                             </div>
-
-                            <div class="dayLocAll">
-                                <div class="dayAll">
-                                    <span class="day active">Day1</span>
-                                    <span class="day">Day2</span>
-                                    <span class="day">Day3</span>
-                                    <span class="day">Day4</span>
-                                    <span class="day">Day5</span>
-                                    <span class="day">Day6</span>
-                                </div>
-
-                                <div class="locList">
-                                    <ul class="active">
-                                        <li>홍콩 해양 공원</li>
-                                        <li>빅토리아 피크</li>
-                                        <li>란터우 섬</li>
-                                        <li>침사추이</li>
-                                        <li>포팅거 스트리트</li>
-                                    </ul>
-                                    <ul>
-                                        <li>스타의 거리</li>
-                                        <li>카우룽 공원</li>
-                                        <li>홍콩 역사 박물관</li>
-                                    </ul>
-                                    <ul>
-                                        <li>머레이 하우스</li>
-                                        <li>치린 수도원</li>
-                                    </ul>
-                                    <ul></ul>
-                                    <ul>
-                                        <li>머레이 하우스</li>
-                                        <li>치린 수도원</li>
-                                    </ul>
-                                    <ul>
-                                        <li>머레이 하우스</li>
-                                        <li>치린 수도원</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="schOne">
-                            <div class="schTopInfo">
-                                <div class="schUser">
-                                    <img src="./source/profImg1.jpg">
-                                    <div>
-                                        <p class="schNicK">닉네임</p>
-                                        <p class="subTxt">30대 • 여성</p>
-                                    </div>
-                                </div>
-                                <div class="schDays">
-                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
-                                    <p class="subTxt">
-                                        23-08-01 ~ 23-08-06
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="schMap schMap02"></div>
-                            <div class="schBottom">
-                                <div>
-                                    <img src="./source/loc.png" class="locIco">
-                                    <span class="schLoc">라스베가스</span>
-                                </div>
-                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
-                            </div>
-
-                            <div class="dayLocAll">
-                                <div class="dayAll">
-                                    <span class="day active">Day1</span>
-                                    <span class="day">Day2</span>
-                                    <span class="day">Day3</span>
-                                    <span class="day">Day4</span>
-                                </div>
-
-                                <div class="locList">
-                                    <ul class="active">
-                                        <li>홍콩 해양 공원</li>
-                                        <li>빅토리아 피크</li>
-                                        <li>란터우 섬</li>
-                                        <li>침사추이</li>
-                                        <li>포팅거 스트리트</li>
-                                    </ul>
-                                    <ul></ul>
-                                    <ul>
-                                        <li>스타의 거리</li>
-                                        <li>카우룽 공원</li>
-                                        <li>홍콩 역사 박물관</li>
-                                    </ul>
-                                    <ul>
-                                        <li>머레이 하우스</li>
-                                        <li>치린 수도원</li>
-                                    </ul>
-                                </div>
-                            </div>
-
-
                         </div>
                     </div>
                 </div>
